--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-10T16:49:08.566458Z",
-     "start_time": "2023-10-10T16:49:08.528729Z"
+     "end_time": "2023-10-10T23:18:51.456795200Z",
+     "start_time": "2023-10-10T23:18:51.423597700Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import PyPDF2\n",
-    "from unidecode import unidecode"
+    "import pandas as pd\n",
+    "from unidecode import unidecode\n",
+    "import re"
    ]
   },
   {
@@ -53,11 +54,16 @@
     "                contPagesFin += 1\n",
     "        \n",
     "        # Initialize a variable to store the extracted text\n",
-    "        extracted_text = ''\n",
-    "        for pageNum in range(contPagesIni,contPagesFin):\n",
+    "        extracted_text1 = ''\n",
+    "        for pageNum in range(contPagesIni,contPagesFin +1):\n",
     "            # Extract text from the current page\n",
     "            page2 = pdfReader.pages[pageNum]\n",
-    "            extracted_text += page2.extract_text()\n",
+    "            extracted_text1 += page2.extract_text()\n",
+    "\n",
+    "        patron = re.compile(f'{textIni}(.*?){textFin}', re.DOTALL)\n",
+    "    \n",
+    "        resultado = patron.search(extracted_text1)\n",
+    "        extracted_text = resultado.group(1)\n",
     "    \n",
     "    return extracted_text\n",
     "       "
@@ -65,8 +71,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T16:49:10.018439700Z",
-     "start_time": "2023-10-10T16:49:10.004105400Z"
+     "end_time": "2023-10-10T23:14:04.446528900Z",
+     "start_time": "2023-10-10T23:14:04.436017800Z"
     }
    },
    "id": "1d27947fcf7b366a"
@@ -94,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T16:50:19.114326500Z",
-     "start_time": "2023-10-10T16:49:13.763991100Z"
+     "end_time": "2023-10-10T23:14:55.654338400Z",
+     "start_time": "2023-10-10T23:14:16.600310200Z"
     }
    },
    "id": "80c0f472939ad7b6"
@@ -114,8 +120,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T16:51:02.377804800Z",
-     "start_time": "2023-10-10T16:51:02.337951Z"
+     "end_time": "2023-10-10T23:15:00.728237300Z",
+     "start_time": "2023-10-10T23:15:00.681726Z"
     }
    },
    "id": "8c680577c60b30b7"
@@ -156,8 +162,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T16:51:05.206266800Z",
-     "start_time": "2023-10-10T16:51:05.182468900Z"
+     "end_time": "2023-10-10T23:15:04.672802800Z",
+     "start_time": "2023-10-10T23:15:04.666211900Z"
     }
    },
    "id": "5104a3bffcbd87c9"
@@ -5712,7 +5718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "results = {}\n",
@@ -5739,7 +5745,7 @@
     "        results[dpto] = {conflictosActivos1[inicio + len(dptos[nDpto] + \"  \")+1 :fin]}\n",
     "        nDpto = nDpto + 1\n",
     "\n",
-    "    stopWords=[\"Tipo:\",\"Ingreso como caso nuevo:\", \"Caso:\",\"Ubicacion:\",\"Actores primarios:\", \"Actores secundarios:\",\"Actores terciarios:\",\"NO HAY DIALOGO\", \"HAY DIALOGO\"]\n",
+    "    stopWords=[\"Tipo:\",\"Ingreso como caso nuevo:\", \"Caso:\",\"Ubicacion:\",\"Actores primarios:\", \"Actores secundarios:\",\"Actores terciarios:\",\"NOHAYDIALOGO\", \"HAY DIALOGO\"]\n",
     "    textoDpto = list(results[dpto])[0]\n",
     "\n",
     "    textoDpto = textoDpto.replace(\"Descripcion  Hechos del mes\", \"\")\n",
@@ -5777,53 +5783,94 @@
     "    textoDpto = textoDpto.replace(\"Ingreso como caso nuevo :\", \"Ingreso como caso nuevo:\")\n",
     "    textoDpto = textoDpto.replace(\"Ingreso  como caso nuevo:\", \"Ingreso como caso nuevo:\")\n",
     "    textoDpto = textoDpto.replace(\"Ingreso como caso  nuevo:\", \"Ingreso como caso nuevo:\")\n",
+    "    textoDpto = textoDpto.replace(\"NO HAY DIALOGO\", \"NOHAYDIALOGO\")\n",
     "    \n",
-    "\n",
-    "    for word in stopWords:\n",
-    "        if word == \"NO HAY DIALOGO\" :\n",
-    "            textoDpto = textoDpto.replace(word, \"|\" + \"NOHAYDIALOGO\" + \"|\")\n",
-    "        elif word == \"HAY DIALOGO\":\n",
-    "            textoDpto = textoDpto.replace(word, \"|\" + \"HAYDIALOGO\" + \"|\")\n",
-    "        elif word == \"Actores primarios:\" or word == \"Actores secundarios:\" or word == \"Actores terciarios:\":\n",
-    "            textoDpto = textoDpto.replace(word, \"|\" + word)\n",
-    "        else:\n",
-    "#            textoDpto = textoDpto.replace(word, \"|\")\n",
-    "            textoDpto = textoDpto.replace(word, \"|\" + word)\n",
-    "\n",
-    "\n",
-    "    texto = textoDpto \n",
-    "    texto = texto.split(\"|\")\n",
+    "    \n",
+    "    texto = textoDpto\n",
+    "    texto = texto.split(\"Tipo:\")\n",
     "    texto = texto[1:]\n",
+    "    texto = [\"Tipo:\" + elem for elem in texto]\n",
+    "    \n",
+    "    cont = 0\n",
+    "    for tex in texto:\n",
+    "        texConf = texto[cont]\n",
+    "        for word in stopWords:\n",
+    "            if word == \"NOHAYDIALOGO\" :\n",
+    "                texConf = texConf.replace(word, \"|\" + \"Dialogo: NOHAYDIALOGO\" + \"|\")\n",
+    "            elif word == \"HAY DIALOGO\":\n",
+    "                texConf = texConf.replace(word, \"|\" + \"Dialogo: HAYDIALOGO\" + \"|\")\n",
+    "            elif word == \"Actores primarios:\" or word == \"Actores secundarios:\" or word == \"Actores terciarios:\":\n",
+    "                texConf = texConf.replace(word, \"|\" + word)\n",
+    "            else:\n",
+    "                texConf = texConf.replace(word, \"|\" + word)\n",
+    "        texConf = texConf.split(\"|\")\n",
+    "        texConf = texConf[1:]\n",
+    "        texto[cont] = texConf\n",
+    "        cont = cont +1\n",
+    "    \n",
     "    results[dpto] = texto\n",
-    "    "
+    "\n",
+    "\n",
+    "resultsIncomp = {}\n",
+    "\n",
+    "dptoList = []\n",
+    "tipoList = []\n",
+    "ingresoList = []\n",
+    "casoList = []\n",
+    "ubiList = []\n",
+    "actPrimList = []\n",
+    "actSecList = []\n",
+    "actTerList = []\n",
+    "dialogList = []\n",
+    "detalleList = []\n",
+    "\n",
+    "for dpto in dptos:\n",
+    "    listConf = results[dpto]\n",
+    "    results[dpto] = [sorted(conf) for conf in listConf if len(conf) == 9]\n",
+    "    resultsIncomp[dpto] = [sorted(conf) for conf in listConf if len(conf) != 9]\n",
+    "    listConf = results[dpto]\n",
+    "\n",
+    "    for conf in listConf:\n",
+    "        dptoList.append(dpto)\n",
+    "        detalleList.append(conf[0])\n",
+    "        actPrimList.append(conf[1])\n",
+    "        actSecList.append(conf[2])\n",
+    "        actTerList.append(conf[3])\n",
+    "        casoList.append(conf[4])\n",
+    "        dialogList.append(conf[5])\n",
+    "        ingresoList.append(conf[6])\n",
+    "        tipoList.append(conf[7])\n",
+    "        ubiList.append(conf[8])\n",
+    "\n",
+    "\n",
+    "listas = [dptoList, tipoList, ingresoList ,casoList, ubiList, actPrimList, actSecList, actTerList, dialogList, detalleList]\n",
+    "keyList = [\"Dpto\", \"Tipo\", \"Ingreso como caso nuevo\", \"Caso\", \"Ubicacion\",\"Actores primarios\", \"Actores secundarios\", \"Actores terciarios\",\"Diálogo\", \"Detalle del mes\"]\n",
+    "diccionario = {key: lista for key, lista in zip(keyList, listas)}\n",
+    "data = pd.DataFrame(diccionario)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T18:05:53.694717500Z",
-     "start_time": "2023-10-10T18:05:53.662914100Z"
+     "end_time": "2023-10-10T23:15:13.347965100Z",
+     "start_time": "2023-10-10T23:15:13.324380800Z"
     }
    },
    "id": "6a6e7811c36a5853"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "outputs": [],
-   "source": [
-    "texto = results[\"Tacna\"]\n",
-    "texto = texto.split(\"|\")\n",
-    "texto = texto[1:]\n",
-    "keyList = [\"Dpto\", \"Tipo\", \"Ingreso como caso nuevo\", \"Caso\", \"Ubicacion\",\"Actores primarios\", \"Actores secundarios\", \"Actores terciarios\",\"Diálogo\", \"Detalle del mes\"]"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-10T17:08:34.427892300Z",
-     "start_time": "2023-10-10T17:08:34.401901400Z"
+     "end_time": "2023-10-10T23:16:59.699727700Z",
+     "start_time": "2023-10-10T23:16:57.936587Z"
     }
    },
-   "id": "a17206c18fe7bc0b"
+   "id": "8bf8630060fbedf1"
   },
   {
    "cell_type": "code",
@@ -5855,8 +5902,7 @@
     "#Conflicto en Lambayeque no tiene actores terciarios --> print(results[\"Lambayeque\"][13])\n",
     "#Conflicto en Moquegua no tiene actores terciarios --> print(results[\"Moquegua\"][05])\n",
     "#Conflicto en Piura no tiene actores terciarios --> print(results[\"Piura\"][50])\n",
-    "#Conflicto en Puno no tiene actores terciarios --> print(results[\"Puno\"][32])\n",
-    "# Problemas extayendo la info del conflicto en Ucayali --> print(results[\"Ucayali\"][4])"
+    "#Conflicto en Puno no tiene actores terciarios --> print(results[\"Puno\"][32])"
    ],
    "metadata": {
     "collapsed": false,
@@ -5871,37 +5917,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
-   "source": [
-    "\n",
-    "dptoList = []\n",
-    "tipoList = []\n",
-    "ingresoList = []\n",
-    "casoList = []\n",
-    "ubiList = []\n",
-    "actPrimList = []\n",
-    "actSecList = []\n",
-    "actTerList = []\n",
-    "dialogList = []\n",
-    "detalleList = []\n",
-    "\n",
-    "nConflictos = int(len(texto)/9)\n",
-    "\n",
-    "nConf = 0\n",
-    "for key in range(0, nConflictos):\n",
-    "    dptoList.append(dpto)\n",
-    "    tipoList.append(texto[key*9])\n",
-    "    ingresoList.append(texto[key*9 + 1])\n",
-    "    casoList.append(texto[key*9 + 2])\n",
-    "    ubiList.append(texto[key*9 + 3])\n",
-    "    actPrimList.append(texto[key*9 + 4])\n",
-    "    actSecList.append(texto[key*9 + 5])\n",
-    "    actTerList.append(texto[key*9 + 6])\n",
-    "    dialogList.append(texto[key*9 + 7])\n",
-    "    detalleList.append(texto[key*9 + 8])\n",
-    "\n",
-    "listas = [dptoList, tipoList, ingresoList ,casoList, ubiList, actPrimList, actSecList, actTerList, dialogList, detalleList]\n",
-    "diccionario = {key: lista for key, lista in zip(keyList, listas)}"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
