--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:21:17.339387Z",
-     "start_time": "2023-10-11T03:21:15.201147500Z"
+     "end_time": "2023-10-11T14:54:45.886612200Z",
+     "start_time": "2023-10-11T14:54:44.224316900Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "#folder_path = \"C:/Users/User/Documents/GitHub/CNHGitHub/Data Perú/Conflictos sociales/pdf_reports_conflictos_sociales/\"\n",
-    "folder_path = \"D:/1. Documentos/0. Bases de datos/0. Dofiles y Scripts/CNH_rep/Data Perú/Conflictos sociales/pdf_reports_conflictos_sociales/\"\n",
+    "folder_path = \"C:/Users/User/Documents/GitHub/CNHGitHub/Data Perú/Conflictos sociales/pdf_reports_conflictos_sociales/\"\n",
+    "#folder_path = \"D:/1. Documentos/0. Bases de datos/0. Dofiles y Scripts/CNH_rep/Data Perú/Conflictos sociales/pdf_reports_conflictos_sociales/\"\n",
     "\n",
     "def extraeTextoPdf(pdfPath, textIni, textFin):\n",
     "    with open(pdfPath, 'rb') as pdfFile:\n",
@@ -71,15 +71,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:38:30.372500300Z",
-     "start_time": "2023-10-11T03:38:30.354729400Z"
+     "end_time": "2023-10-11T14:54:50.674989100Z",
+     "start_time": "2023-10-11T14:54:50.652169400Z"
     }
    },
    "id": "1d27947fcf7b366a"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Open the PDF file in read-binary mode\n",
@@ -100,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:39:22.959415200Z",
-     "start_time": "2023-10-11T03:38:33.768157600Z"
+     "end_time": "2023-10-11T14:55:46.899751900Z",
+     "start_time": "2023-10-11T14:54:56.114012200Z"
     }
    },
    "id": "80c0f472939ad7b6"
