--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-11T14:54:45.886612200Z",
-     "start_time": "2023-10-11T14:54:44.224316900Z"
+     "end_time": "2023-10-13T19:47:27.622676200Z",
+     "start_time": "2023-10-13T19:47:26.051857200Z"
     }
    },
    "outputs": [],
@@ -71,15 +71,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T14:54:50.674989100Z",
-     "start_time": "2023-10-11T14:54:50.652169400Z"
+     "end_time": "2023-10-13T19:47:28.685706700Z",
+     "start_time": "2023-10-13T19:47:28.672091600Z"
     }
    },
    "id": "1d27947fcf7b366a"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "# Open the PDF file in read-binary mode\n",
@@ -89,46 +89,57 @@
     "conflictosActivos1 = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.1 CONFLICTOS ACTIVOS\", textFin= \"5.2 CONFLICTOS\")\n",
     "\n",
     "# En más de un departamento\n",
-    "conflictosActivos2  = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.2 CONFLICTOS\", textFin= \"5.3 CONFLICTOS\")\n",
+    "#conflictosActivos2  = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.2 CONFLICTOS\", textFin= \"5.3 CONFLICTOS\")\n",
     "\n",
     "# Reactivados\n",
-    "conflictosReactivados = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.3 CONFLICTOS\", textFin= \"VI. DETALLE DE LOS CONFLI\")\n",
+    "#conflictosReactivados = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.3 CONFLICTOS\", textFin= \"VI. DETALLE DE LOS CONFLI\")\n",
     "\n",
     "# Latentes\n",
-    "conflictosLatentes = extraeTextoPdf(pdfPath = pdfPath, textIni = \"VI. DETALLE DE LOS CONFLI\", textFin= \"6.1 CONFLICTOS\")\n"
+    "#conflictosLatentes = extraeTextoPdf(pdfPath = pdfPath, textIni = \"VI. DETALLE DE LOS CONFLI\", textFin= \"6.1 CONFLICTOS\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T14:55:46.899751900Z",
-     "start_time": "2023-10-11T14:54:56.114012200Z"
+     "end_time": "2023-10-13T20:56:41.562748900Z",
+     "start_time": "2023-10-13T20:56:33.839630Z"
     }
    },
    "id": "80c0f472939ad7b6"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "290871\n",
+      "290871\n"
+     ]
+    }
+   ],
    "source": [
-    "encabezados = [\"Reporte Mensual de Conflictos Sociales N.° 234 – Agosto 2023\", \"ADJUNTÍA PARA LA  PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBL O\"]\n",
+    "print(len(conflictosActivos1))\n",
+    "encabezados = [\"Reporte Mensual de Conflictos Sociales N.° 234 – Agosto 2023\", \"ADJUNTÍA PARA LA  PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBL O\", \"ADJUNTÍA PARA LA PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBLO\"]\n",
     "for word in encabezados:\n",
     "    conflictosActivos1 = conflictosActivos1.replace(word, \"\")\n",
     "\n",
-    "conflictosActivos1 = unidecode(conflictosActivos1)"
+    "conflictosActivos1 = unidecode(conflictosActivos1)\n",
+    "print(len(conflictosActivos1))\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:55:49.284960100Z",
-     "start_time": "2023-10-11T03:55:49.209661700Z"
+     "end_time": "2023-10-13T20:56:50.946697200Z",
+     "start_time": "2023-10-13T20:56:50.946193600Z"
     }
    },
    "id": "8c680577c60b30b7"
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "departamentosPeru = [\n",
@@ -162,15 +173,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:55:53.114436300Z",
-     "start_time": "2023-10-11T03:55:53.096815100Z"
+     "end_time": "2023-10-13T20:33:37.693611800Z",
+     "start_time": "2023-10-13T20:33:37.693611800Z"
     }
    },
    "id": "5104a3bffcbd87c9"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "results = {}\n",
@@ -183,6 +194,8 @@
     "        dptos.append(dpto)\n",
     "    except:\n",
     "        continue\n",
+    "\n",
+    "del encuentra\n",
     "\n",
     "# Agrupación por dptos\n",
     "nDpto = 0\n",
@@ -262,7 +275,6 @@
     "    \n",
     "    results[dpto] = texto\n",
     "\n",
-    "\n",
     "resultsIncomp = {}\n",
     "\n",
     "dptoList = []\n",
@@ -294,58 +306,38 @@
     "        tipoList.append(conf[7])\n",
     "        ubiList.append(conf[8])\n",
     "\n",
-    "\n",
     "listas = [dptoList, tipoList, ingresoList ,casoList, ubiList, actPrimList, actSecList, actTerList, dialogList, detalleList]\n",
-    "keyList = [\"Dpto\", \"Tipo\", \"Ingreso como caso nuevo\", \"Caso\", \"Ubicacion\",\"Actores primarios\", \"Actores secundarios\", \"Actores terciarios\",\"Diálogo\", \"Detalle del mes\"]\n",
+    "keyList = [\"Dpto\", \"Tipo\", \"Ingreso como caso nuevo\", \"Caso\", \"Ubicacion\",\"Actores primarios\", \"Actores secundarios\", \"Actores terciarios\",\"Dialogo\", \"Detalle del mes\"]\n",
+    "\n",
+    "patrones = [\":  \", \": \"]\n",
+    "\n",
+    "for i, lista in enumerate(listas):\n",
+    "    for patron in patrones:\n",
+    "        col = keyList[i] + patron\n",
+    "        listas[i] = [tex.replace(col,\"\") for tex in lista]\n",
+    "\n",
+    "patrones = [\".  \\n\", \". \\n\", \" . \\n\", \".   \\n\", \"  \\n\", \": \"]\n",
+    "\n",
+    "for patron in patrones:\n",
+    "    for i, lista in enumerate(listas):\n",
+    "        listas[i] = [tex.replace(patron,\"\") for tex in lista]\n",
+    "\n",
     "diccionario = {key: lista for key, lista in zip(keyList, listas)}\n",
-    "data = pd.DataFrame(diccionario)\n",
-    "\n"
+    "data = pd.DataFrame(diccionario)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-11T03:56:00.836672300Z",
-     "start_time": "2023-10-11T03:56:00.801801100Z"
+     "end_time": "2023-10-13T20:33:45.217798800Z",
+     "start_time": "2023-10-13T20:33:45.217798800Z"
     }
    },
    "id": "6a6e7811c36a5853"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-10T23:16:59.699727700Z",
-     "start_time": "2023-10-10T23:16:57.936587Z"
-    }
-   },
-   "id": "8bf8630060fbedf1"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Actores primarios: Coordinadora Regional de los Pueblos \n",
-      "Indigenas de AIDESEP Atalaya (CORPIAA), Organizacion \n",
-      "Indigena de la Region Atalaya  (OIRA), Federacion Asheninka \n",
-      "de la Cuenca del Rio Unini (FACRU), Organizacion Indigena \n",
-      "Yines de la Provincia de Atalaya (OIYPA), Federacion \n",
-      "Ashaninka Bajo Urubamba (FABU), Federacion de \n",
-      "Comunidades Nativas del Distrito de Sepahua (FECONADIS), \n",
-      "Federacion d e Comunidades Nativas Asheninkas de la \n",
-      "Provincia de Atalaya (FECONAPA),Federacion de Mujeres \n",
-      "Indigenas de la Provincia de Atalaya (FEMIPA),Union Regional \n",
-      "de Pueblos Indigenas de la Amazonia (URPIA),Confederacion \n"
-     ]
-    }
-   ],
    "source": [
     "#Conflicto en Arequipa no tiene actores secundarios --> print(results[\"Arequipa\"][31])\n",
     "#Conflicto en Cajamarca no tiene actores secundarios --> print(results[\"Cajamarca\"][13])\n",
@@ -357,26 +349,9 @@
     "#Conflicto en Puno no tiene actores terciarios --> print(results[\"Puno\"][32])"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-10T18:06:25.150443200Z",
-     "start_time": "2023-10-10T18:06:25.123809500Z"
-    }
+    "collapsed": false
    },
    "id": "3d7eb2792f801ea3"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-10-10T17:03:24.532871800Z"
-    }
-   },
-   "id": "e2e30737ef6b5317"
   }
  ],
  "metadata": {
