--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -79,15 +79,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "outputs": [],
    "source": [
+    "# 35-49 | Desde: 1. Conflictos activos | TOTAL\n",
+    "# 50-51 | Desde: 1.1. Conflictos activos | Hasta: TOTAL\n",
+    "# 52-89 | Desde: 1.1 Conflictos activos | Hasta: TOTAL\n",
+    "# 90-125 | Desde: Detalle de los conflictos sociales en un departamento: | Hasta: Detalle de los conflictos sociales en más de un departamento:\n",
+    "# 126-134 | Desde: 4.1 CONFLICTOS | Hasta: 4.2 CONFLICTOS\n",
+    "# 135-140 | Desde: 5.1 CONFLICTOS | Hasta: 5.2 CONFLICTOS\n",
+    "# 141-171 | Desde: 5.1 CONFLICTOS | Hasta: 4.2 CONFLICTOS SOCIALES\n",
+    "# 172-234 | Desde: 5.1 CONFLICTOS | Hasta: 5.2 CONFLICTOS SOCIALES\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e2152950dcdabcdb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "sequence index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[73], line 5\u001B[0m\n\u001B[0;32m      2\u001B[0m pdfPath \u001B[38;5;241m=\u001B[39m folder_path \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m156_201_7.pdf\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m# En un solo departamento\u001B[39;00m\n\u001B[1;32m----> 5\u001B[0m conflictosActivos1 \u001B[38;5;241m=\u001B[39m \u001B[43mextraeTextoPdf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpdfPath\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mpdfPath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtextIni\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m5.1 CONFLICTOS ACTIVOS\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtextFin\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m5.2 CONFLICTOS\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# En más de un departamento\u001B[39;00m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m#conflictosActivos2  = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.2 CONFLICTOS\", textFin= \"5.3 CONFLICTOS\")\u001B[39;00m\n\u001B[0;32m      9\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# Latentes\u001B[39;00m\n\u001B[0;32m     14\u001B[0m \u001B[38;5;66;03m#conflictosLatentes = extraeTextoPdf(pdfPath = pdfPath, textIni = \"VI. DETALLE DE LOS CONFLI\", textFin= \"6.1 CONFLICTOS\")\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[2], line 34\u001B[0m, in \u001B[0;36mextraeTextoPdf\u001B[1;34m(pdfPath, textIni, textFin)\u001B[0m\n\u001B[0;32m     31\u001B[0m extracted_text1 \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m     32\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m pageNum \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(contPagesIni,contPagesFin \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[0;32m     33\u001B[0m     \u001B[38;5;66;03m# Extract text from the current page\u001B[39;00m\n\u001B[1;32m---> 34\u001B[0m     page2 \u001B[38;5;241m=\u001B[39m \u001B[43mpdfReader\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpages\u001B[49m\u001B[43m[\u001B[49m\u001B[43mpageNum\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m     35\u001B[0m     extracted_text1 \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m page2\u001B[38;5;241m.\u001B[39mextract_text()\n\u001B[0;32m     37\u001B[0m patron \u001B[38;5;241m=\u001B[39m re\u001B[38;5;241m.\u001B[39mcompile(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtextIni\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m(.*?)\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtextFin\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m, re\u001B[38;5;241m.\u001B[39mDOTALL)\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\PyPDF2\\_page.py:2077\u001B[0m, in \u001B[0;36m_VirtualList.__getitem__\u001B[1;34m(self, index)\u001B[0m\n\u001B[0;32m   2075\u001B[0m     index \u001B[38;5;241m=\u001B[39m len_self \u001B[38;5;241m+\u001B[39m index\n\u001B[0;32m   2076\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m index \u001B[38;5;241m<\u001B[39m \u001B[38;5;241m0\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m index \u001B[38;5;241m>\u001B[39m\u001B[38;5;241m=\u001B[39m len_self:\n\u001B[1;32m-> 2077\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mIndexError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msequence index out of range\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   2078\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_function(index)\n",
+      "\u001B[1;31mIndexError\u001B[0m: sequence index out of range"
+     ]
+    }
+   ],
+   "source": [
     "# Open the PDF file in read-binary mode\n",
-    "pdfPath = folder_path + '234_202_3.pdf'\n",
+    "pdfPath = folder_path + '156_201_7.pdf'\n",
     "\n",
     "# En un solo departamento\n",
     "conflictosActivos1 = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.1 CONFLICTOS ACTIVOS\", textFin= \"5.2 CONFLICTOS\")\n",
-    "\n",
+    "#4.2 CONFLICTOS\n",
     "# En más de un departamento\n",
     "#conflictosActivos2  = extraeTextoPdf(pdfPath = pdfPath, textIni = \"5.2 CONFLICTOS\", textFin= \"5.3 CONFLICTOS\")\n",
     "\n",
@@ -100,28 +133,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-13T20:56:41.562748900Z",
-     "start_time": "2023-10-13T20:56:33.839630Z"
+     "end_time": "2023-10-13T21:11:52.836280900Z",
+     "start_time": "2023-10-13T21:11:45.545949700Z"
     }
    },
    "id": "80c0f472939ad7b6"
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "290871\n",
-      "290871\n"
+      "290305\n",
+      "285675\n"
      ]
     }
    ],
    "source": [
     "print(len(conflictosActivos1))\n",
-    "encabezados = [\"Reporte Mensual de Conflictos Sociales N.° 234 – Agosto 2023\", \"ADJUNTÍA PARA LA  PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBL O\", \"ADJUNTÍA PARA LA PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBLO\"]\n",
+    "encabezados = [\"Reporte Mensual de Conflictos Sociales N.° 233 – Julio 2023\", \"ADJUNTÍA PARA LA  PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBL O\", \"ADJUNTÍA PARA LA PREVENCIÓN DE CONFLICTOS SOCIALES Y LA GOBERNABILIDAD – DEFENSORÍA DEL PUEBLO\"]\n",
     "for word in encabezados:\n",
     "    conflictosActivos1 = conflictosActivos1.replace(word, \"\")\n",
     "\n",
@@ -131,15 +164,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-13T20:56:50.946697200Z",
-     "start_time": "2023-10-13T20:56:50.946193600Z"
+     "end_time": "2023-10-13T21:09:46.066167600Z",
+     "start_time": "2023-10-13T21:09:46.031014400Z"
     }
    },
    "id": "8c680577c60b30b7"
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "departamentosPeru = [\n",
@@ -173,15 +206,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-13T20:33:37.693611800Z",
-     "start_time": "2023-10-13T20:33:37.693611800Z"
+     "end_time": "2023-10-13T21:09:49.511605400Z",
+     "start_time": "2023-10-13T21:09:49.508090600Z"
     }
    },
    "id": "5104a3bffcbd87c9"
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "results = {}\n",
@@ -328,8 +361,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-13T20:33:45.217798800Z",
-     "start_time": "2023-10-13T20:33:45.217798800Z"
+     "end_time": "2023-10-13T21:09:51.816619900Z",
+     "start_time": "2023-10-13T21:09:51.795709300Z"
     }
    },
    "id": "6a6e7811c36a5853"
