--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-\item {Bachelor in Economics with a concentration in economics for the public sector and with more than 5 years of experience in consulting in public policies, social policies and economics. He has studies in qualitative and quantitative methods applied to the evaluation of social programs and public management. Likewise, he has experience in database management in STATA, R and Python, applied to social sciences.}
+\item {Bachelor in Economics with a concentration in economics for the public sector and with more than 5 years of experience in consulting in public policies, social policies and economics. I have studies in qualitative and quantitative methods applied to the evaluation of social programs and public management. I have experience in database management in STATA, R and Python applied to social sciences.}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -34,10 +34,12 @@ GPA: 15.64/20.0 | Ranked: 6 out of 68 | Concentration in economics for the publi
 
 \begin{rSection}{Courses and Specialization programs}
 
-{\bf MicroMasters Program on Data, Economics and Development Policy}, Massachusetts Institute of Technology - MIT \hfill {2022 - 2024*}\\
-Currently enrolled in the program. Already approved 3 out of 5 courses of the program.
+{\bf MicroMasters Program on Data, Economics and Development Policy}, Massachusetts Institute of Technology - MIT \hfill {2022 - Present}\\
+Coursework: Designing and Running Randomized Evaluations, Data Analysis for Social Scientists, Foundations of Development Policy.
+Currently enrolled in the program. Already approved 3 out of 6 courses of the program.
 
-{\bf Diploma of Specialization in Data Science for Social Sciences and Public Management}, Pontificia Universidad Católica del Perú - PUCP \hfill {2022 - 2023*}\\
+{\bf Specialization in Data Science for Social Sciences and Public Management}, Pontificia Universidad Católica del Perú - PUCP \hfill {2022 - 2023}\\
+Coursework: Python Intermediate, Introduction to Machine Learning, Advanced Applied Econometrics.
 Currently enrolled in the program. Already approved 8 out of 10 courses of the program.
 
 {\bf Governance, Political Management and Public Management Program}, Pontificia Universidad Católica del Perú - PUCP \hfill {2020 - 2021}\\
@@ -45,8 +47,6 @@ Completed with satisfactory approval by the Development Bank of Latin America (C
 
 {\bf Social Programs Evaluation}, Grupo de Análisis para el Desarrollo - GRADE \hfill {2019}\\
 Completed with the certificate of "Outstanding Approval". 
-
-* Expected dates
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -60,19 +60,22 @@ Videnza Consultores \hfill \textit{Lima, Perú}
     \itemsep -3pt {} 
       \item Coordinate, design, plan and lead the execution of more than 15 consultancy projects and proposals, which include the analysis and systematization of primary and secondary data.
       \item Lead the design and implementation of three topics at the “Observatorio del Bicentenario”, a repository of national and regional statistics launched in October 2021 with more than 150 indicators. \href{https://propuestasdelbicentenario.pe/observatorio/}{Available here.}
-      \item Successfully collaborate with the publication of two books under the initiative “Propuestas del Bicentenario” which presents public policy proposals to face the main challenges of Peru to contribute to economic, social, and environmental development. 
- \end{itemize}
+      \item Successfully collaborate with the publication of 2 books under the initiative "Propuestas del Bicentenario" which presents public policy proposals to face the main challenges of Peru.
+   \end{itemize}
  
  \textbf{Analyst} \hfill Jul 2019 - Jun 2020\\
 Consejo Privado de Competitividad (CPC) \hfill \textit{Lima, Perú}
  \begin{itemize}
     \itemsep -3pt {} 
-      \item Lead the annually and quarterly actualization of the Regional Public Management Index (IRGP) which measures the performance of regional and local public management at the 25 regions of Perú and it was published on Diario Gestión in several times. 
+      \item Lead the annually and quarterly actualization of the Regional Public Management Index (IRGP) which measures the performance of regional and local public management at the 25 regions of Perú and it was published on Diario Gestión in several times. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here.}
       \item Provide follow-up to the public policy proposals, which more than 69 percent have got into the National Competitiveness and Productivity Plan, national laws, and other areas of the public sector.
       \item Analise and develop public policy evidence-based proposals and develop the Competitiveness Report 2020 and 2021. I’ve contributed to Infrastructure, Health System, Business Environment and Logistics chapters. 
  \end{itemize}
+\end{rSection} 
 
-\textbf{Project assistant} \hfill Jan 2018 - Jul 2019\\
+\pagebreak
+\begin{rSection}{Professional experience}
+   \textbf{Project assistant} \hfill Jan 2018 - Jul 2019\\
 AC Pública, APOYO Consultoría's subsidiary \hfill \textit{Lima, Perú}
  \begin{itemize}
     \itemsep -3pt {} 
@@ -114,8 +117,7 @@ English & Advanced\\
 \begin{rSection}{Informatic software and programming}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Microsoft Excel & Advanced
-\\
+Microsoft Excel & Advanced\\
 Eviews & Advanced\\
 STATA & Advanced\\
 R & Intermediate\\
@@ -128,57 +130,56 @@ Atlas.ti & Intermediate\\
 % PROYECTOS Y PUBLICACIONES	
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Consultancy projects}
+\begin{rSection}{Publications}
+During my professional experience I have contributed to the following publications:
+\item Bustamante, P. (2022) \emph{La necesaria viabilidad social para el desarrollo sostenible de la minería}. En L. M. Castilla et al (2022), \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
+\item Castilla, L. M. (2021) \emph{Reactivación Económica para el crecimiento sostenido}. En L. M. Castilla et al (2021), \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
+\item Castilla, L. M. (2022) \emph{Encadenamientos productivos y desarrollo regional: el caso de la minería.}.  En L. M. Castilla et al (2022), \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
+\item Castilla, L. M., Seinfeld, J., von Hese, M., Besich, N. (2021) \emph{Introducción}. En L. M. Castilla et al (2021), \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
+\item Consejo Privado de Competitividad. (2019). \emph{Informe de Competitividad 2020}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2019/11/CPC_Peru_INC-2020_Libro-Web-Paginas.pdf}{here.}
+%\item Consejo Privado de Competitividad. (2020). \emph{Índice Regional de Gestión Pública (IRGP) 2020}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here.}
+\item Consejo Privado de Competitividad. (2020). \emph{Informe de Competitividad 2021}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2021/01/Informe-de-Competitividad-2021-CPC.pdf}{here.}
+\end{rSection} 
+
+\begin{rSection}{Relevant consultancy projects}
 \vspace{-1.25em}
-\item \textbf{Formulation of the National Agrarian Innovation Policy and Plan (Jan 2018 - Jan 2019).} {Consultancy within the framework of the National Agricultural Innovation Program whose purpose was to develop a situational diagnosis of agricultural innovation in Peru and, based on said diagnosis, formulate the National Policy and Plan for Agricultural Innovation.}
-\item \textbf{Consultancy for the design of operational models for the optimization of educational management processes in the Local Educational Management Units (Nov 2018 - Mar 2019).} {Consultancy to design a new operating model for the Local Educational Management Units in Peru, in order to streamline, simplify and standardize four prioritized administrative processes, which contribute to improving educational quality.}
-\item \textbf{Update of the Master Development Plans of 12 airports managed by Aeropuertos del Perú (Dec 2018 - Jul 2019).} {Consultancy to update the estimates of demand and supply for the Master Development Plans (PMD) of the 12 airports under concession by Aeropuertos del Perú. From the projections of passenger and cargo demand, it was determined at what year it would be necessary to expand the airports. For more information on PMDs, go \href{https://www.adp.com.pe/es/nuestros-proyectos}{here.}}
-\end{rSection} 
-
-\pagebreak
-\begin{rSection}{Consultancy projects}
-\item \textbf{Consultancy for the development of strategies that strengthen the Catholic University Sedes Sapientiae in its subsidiary in Chulucanas (Mar 2019 - Jul 2019).} {Consultancy to develop a study of demand and supply for the implementation of a new university campus of the Universidad Católica Sedes Sapientiae (UCSS) in its branch in Chulucanas, Piura. Currently, the UCSS is in the process of designing and building the new facilities of the new campus in Chulucanas.}
+\item \textbf{Formulation of the National Agrarian Innovation Policy and Plan (Jan 2018 - Jan 2019).} {Consultancy within the framework of the National Agricultural Innovation Program whose purpose was to develop a situational diagnosis of agricultural innovation in Peru and formulate the National Policy and Plan for Agricultural Innovation.}
+%\item \textbf{Consultancy for the design of operational models for the optimization of educational management processes in the Local Educational Management Units (Nov 2018 - Mar 2019).} {Consultancy to design a new operating model for the Local Educational Management Units in Peru, in order to streamline, simplify and standardize four prioritized administrative processes, which contribute to improving educational quality.}
+%\item \textbf{Update of the Master Development Plans of 12 airports managed by Aeropuertos del Perú (Dec 2018 - Jul 2019).} {Consultancy to update the estimates of demand and supply for the Master Development Plans (PMD) of the 12 airports under concession by Aeropuertos del Perú. From the projections of passenger and cargo demand, it was determined at what year it would be necessary to expand the airports. For more information on PMDs, go \href{https://www.adp.com.pe/es/nuestros-proyectos}{here.}}
+%\item \textbf{Consultancy for the development of strategies that strengthen the Catholic University Sedes Sapientiae in its subsidiary in Chulucanas (Mar 2019 - Jul 2019).} {Consultancy to develop a study of demand and supply for the implementation of a new university campus of the Universidad Católica Sedes Sapientiae (UCSS) in its branch in Chulucanas, Piura. Currently, the UCSS is in the process of designing and building the new facilities of the new campus in Chulucanas.}
 \item \textbf{Analysis of the situation of children and adolescents in Peru for UNICEF Peru (Jul 2020 - Feb 2021).} {Consultancy to develop the analysis of the situation of children and adolescents for the new Cooperation Program between the United Nations Children's Fund (UNICEF) and the Peruvian State. This analysis focused on the rights to health, education, social protection, and protection from violence. You can access the executive summary \href{https://www.unicef.org/peru/media/12141/file/Resumen Ejecutivo: Situaci%C3%B3n de ni%C3%B1as, ni%C3%B1os y adolescentes en el Per%C3%BA .pdf}{here.}}
-\item \textbf{Research project on the performance of public officials in charge of general procurement processes in Peru (Jul 2020 - Jan 2021).} {Consultancy with the objective of identifying strategies aimed at achieving improvements in the processes of public procurement of medical supplies. Specifically, an intervention based on behavioral sciences was designed and an impact evaluation plan was designed to measure the results of said intervention.}
-\item \textbf{Proposal of crucial indicators for monitoring the institutional management of the Social Health Insurance – EsSalud (Dec 2020 - Feb 2021).} {Consultancy to design a board of management indicators that facilitate the monitoring and analysis of health benefits, so that the executive management of EsSalud can make better decisions and improve the provision of health services.}
-\item \textbf{Consultancy for the Second Measurement of the Project Integrating Venezuelan Children and Adolescents in Peru for UNICEF Peru (Jan 2021 - Mar 2021).} {Consultancy to evaluate the final situation of the project "Integrating Venezuelan Girls, Boys and Adolescents in Peru" implemented by UNICEF Peru. The evaluation was carried out based on the measurement of indicators based on primary and secondary information; as well as from the development of three case studies.}
-\item \textbf{Consultancy for the measurement of results of the study of interventions to support public procurement processes in Peru (Mar 2021 - Jan 2022).} {Consultancy to implement and monitor the intervention designed in the intervention designed to improve public procurement processes for medical supplies, as well as to perform an impact assessment of the intervention. The intervention allowed for a higher purchase award ratio and a reduction in the unit prices of purchases of medical supplies.}
-\item \textbf{Preparation of an analysis of the impact of the modification of the credit to the EPS against the contributions to EsSalud (Jun 2021 - Jul 2021).} {Consultancy to carry out a sensitivity analysis of EsSalud's income in the face of possible changes in the level of credit received by Health Provider Companies. Likewise, an analysis of the financial impact of said changes was carried out and proposals were made to ensure the financial sustainability of the institution.}
-\item \textbf{Formulation of the Observatory of the “Propuestas del Bicentenario” initiative of Videnza Consultores for the thematic topics of Efficient State, Extractive Industries and Agriculture (Jun 2021 - Oct 2021).} {Internal project of Videnza Consultores within the framework of the "Bicentennial Proposals" initiative, with the purpose of generating an observatory of indicators that allows evaluating and monitoring 8 key axes with information at the national and regional levels. For more information about the observatory, enter \href{https://propuestasdelbicentenario.pe/observatorio/}{here.}}
-\item \textbf{Consultancy for the preparation of a discussion document on the generation of value in the environment of mining projects in Peru and its implications in the conflict (Nov 2021 - Feb 2022).} {Consultancy to identify the conditions and characteristics necessary for the generation of value in environments where mining activities are carried out; as well as to identify the relationship that exists between these characteristics and social conflict.}
-\item \textbf{Consultancy for the development of a manual of concepts on social relations in the Southern Mining Corridor for MMG Las Bambas (Mar 2022 - May 2022).} {Consultancy to develop a manual of concepts that lay the foundations for designing and implementing an effective relationship strategy for the company MMG Las Bambas with the institutions and actors in the southern highway corridor (Apurimac - Cotabambas, Cusco - Chumbivilcas and Arequipa).}
-\end{rSection} 
+\item \textbf{Research project on the performance of public officials in charge of general procurement processes in Peru (Jul 2020 - Jan 2021).} {Consultancy to identify strategies that contribute to improving the public procurement process of medical supplies. Specifically, an intervention based on behavioral sciences was designed and an impact evaluation plan was designed to measure the results of said intervention.}
+%\item \textbf{Proposal of crucial indicators for monitoring the institutional management of the Social Health Insurance – EsSalud (Dec 2020 - Feb 2021).} {Consultancy to design a board of management indicators that facilitate the monitoring and analysis of health benefits, so that the executive management of EsSalud can make better decisions and improve the provision of health services.}
+%\item \textbf{Consultancy for the Second Measurement of the Project Integrating Venezuelan Children and Adolescents in Peru for UNICEF Peru (Jan 2021 - Mar 2021).} {Consultancy to evaluate the final situation of the project "Integrating Venezuelan Girls, Boys and Adolescents in Peru" implemented by UNICEF Peru. The evaluation was carried out based on the measurement of indicators based on primary and secondary information; as well as from the development of three case studies.}
+%\end{rSection} 
 
-\pagebreak
-\begin{rSection}{Consultancy projects}
-\item \textbf{Consultancy for the identification of the institutional arrangement for the implementation of the Program in the Southern Mining Corridor (May 2022 - Jul 2022).} {Consultancy to develop an analysis of the possible institutional designs or options for the implementation of the investment program under a territorial approach, as well as to carry out a comparative analysis of the identified institutional designs or options.}
+%\pagebreak
+%\begin{rSection}{Consultancy projects}
+\item \textbf{Consultancy for the measurement of results of the study of interventions to support public procurement processes in Peru (Mar 2021 - Jan 2022).} {Consultancy to implement and monitor the intervention designed to improve public procurement processes for medical supplies, as well as to perform an impact evaluation. The intervention allowed for a higher purchase award ratio and a reduction in the unit prices of purchases of medical supplies.}
+%\item \textbf{Preparation of an analysis of the impact of the modification of the credit to the EPS against the contributions to EsSalud (Jun 2021 - Jul 2021).} {Consultancy to carry out a sensitivity analysis of EsSalud's income in the face of possible changes in the level of credit received by Health Provider Companies. Likewise, an analysis of the financial impact of said changes was carried out and proposals were made to ensure the financial sustainability of the institution.}
+%\item \textbf{Formulation of the Observatory of the “Propuestas del Bicentenario” initiative of Videnza Consultores for the thematic topics of Efficient State, Extractive Industries and Agriculture (Jun 2021 - Oct 2021).} {Internal project of Videnza Consultores within the framework of the "Bicentennial Proposals" initiative, with the purpose of generating an observatory of indicators that allows evaluating and monitoring 8 key axes with information at the national and regional levels. For more information about the observatory, enter \href{https://propuestasdelbicentenario.pe/observatorio/}{here.}}
+\item \textbf{Consultancy for the preparation of a discussion document on the generation of value in the environment of mining projects in Peru and its implications in the conflict (Nov 2021 - Feb 2022).} {Consultancy to identify the conditions and characteristics necessary for the generation of value in environments where mining activities are carried out; as well as to identify the relationship that exists between these characteristics and social conflict.}
+%\item \textbf{Consultancy for the development of a manual of concepts on social relations in the Southern Mining Corridor for MMG Las Bambas (Mar 2022 - May 2022).} {Consultancy to develop a manual of concepts that lay the foundations for designing and implementing an effective relationship strategy for the company MMG Las Bambas with the institutions and actors in the southern highway corridor (Apurimac - Cotabambas, Cusco - Chumbivilcas and Arequipa).}
+%\end{rSection} 
+
+%\pagebreak
+%\begin{rSection}{Consultancy projects}
+%\item \textbf{Consultancy for the identification of the institutional arrangement for the implementation of the Program in the Southern Mining Corridor (May 2022 - Jul 2022).} {Consultancy to develop an analysis of the possible institutional designs or options for the implementation of the investment program under a territorial approach, as well as to carry out a comparative analysis of the identified institutional designs or options.}
 \item \textbf{Estimation of the fiscal and economic impact of the energy transition in Peru (Aug 2022 - Dec 2022).} {Consulting to develop the estimate of the fiscal and economic impact of the energy transition of the Peruvian electricity matrix, in terms of loss of gas royalty collection.}
-\item \textbf{Consulting for the measurement of results of the RG-T1736 study: Intervention to support low-value public procurement processes in Peru (Sep 2022 - Dec 2022).} {Consulting to implement and monitor the intervention designed to improve small-value public procurement processes in public entities in the health sector, as well as to carry out an impact evaluation of the intervention.}
-\item \textbf{Technical Assistance for the integration of the processes that make up the Multiannual Investment Programming and the Multiannual Budgetary Programming in terms of investments (Sep 2022 - Jan 2023).} {Consulting to prepare a proposal to optimize the automation and interrelation between the processes of the Multiannual Investment Programming and the Multiannual Budgetary Programming in terms of investments.}
-\item \textbf{Technical Assistance for the exploration of financial instrument options that contribute to the conservation and sustainable use of biodiversity, with special attention to pollinating insects (Dec 2022 - Feb 2023).} {Exploratory study on the options for financial instruments that contribute to the conservation and sustainable use of biodiversity, with special attention to pollinating insects in Peru, Mexico, Costa Rica and Brazil.}
-\item \textbf{Implementation of the third measurement of the 2023 social capital index to community organizations in the DAIS (Comprehensive and Sustainable Alternative Development) field and comparative analysis of the results of the three measurements (Mar 2023 - Jul 2023).} {Consulting to develop the third measurement of the Social Capital Index for 24 producer organizations and 34 neighborhood organizations within the scope of the USAID DEVIDA Institutional Strengthening Project; as well as the systematization of the design and application process of the Social Capital Index in 2019, 2021 and 2023. This work involved a documentary review and qualitative field work to identify strengths and opportunities for improvement in the application of the ICS.}
+%\item \textbf{Consulting for the measurement of results of the RG-T1736 study: Intervention to support low-value public procurement processes in Peru (Sep 2022 - Dec 2022).} {Consulting to implement and monitor the intervention designed to improve small-value public procurement processes in public entities in the health sector, as well as to carry out an impact evaluation of the intervention.}
+\item \textbf{Technical Assistance for the integration of the processes that make up the Multiannual Investment Programming and the Multiannual Budgetary Programming in terms of investments (Sep 2022 - Jan 2023).} {Consulting to prepare a proposal to optimize the automation and interrelation between the processes of the Multiannual Investment Programming and the Multiannual Budgetary Programming of public investments.}
+%\item \textbf{Technical Assistance for the exploration of financial instrument options that contribute to the conservation and sustainable use of biodiversity, with special attention to pollinating insects (Dec 2022 - Feb 2023).} {Exploratory study on the options for financial instruments that contribute to the conservation and sustainable use of biodiversity, with special attention to pollinating insects in Peru, Mexico, Costa Rica and Brazil.}
+%\item \textbf{Implementation of the third measurement of the 2023 social capital index to community organizations in the DAIS (Comprehensive and Sustainable Alternative Development) field and comparative analysis of the results of the three measurements (Mar 2023 - Jul 2023).} {Consulting to develop the third measurement of the Social Capital Index for 24 producer organizations and 34 neighborhood organizations within the scope of the USAID DEVIDA Institutional Strengthening Project; as well as the systematization of the design and application process of the Social Capital Index in 2019, 2021 and 2023. This work involved a documentary review and qualitative field work to identify strengths and opportunities for improvement in the application of the ICS.}
 \item \textbf{Consulting for the systematization of public management experiences or practices of the USAID Project: Institutional Strengthening of DEVIDA (FID) (Apr 2023 - Sep 2023).} {Consulting for the systematization of five public management experiences of the FID Project. The experiences prioritized by the FID Project were: i) strengthening of contracting management, ii) strengthening of producer organizations through the VEO tool, iii) promotion of obtaining financing in community organizations, iv) strengthening of investment management in municipalities and v) obtaining additional municipal resources for public investment. This work involved a documentary review and qualitative field work to identify strengths and opportunities for improvement in the five experiences prioritized by the FID Project.}
 \end{rSection} 
 %----------------------------------------------------------------------------------------
-\pagebreak
-\begin{rSection}{Publications}
-During my professional experience I have contributed to the following publications:
-\item Bustamante, P. (2022) \emph{La necesaria viabilidad social para el desarrollo sostenible de la minería}. En L. M. Castilla, J. Seinfield, N. Besich, C. Trivelli, J. Gallardo, A. Matsuda, . . . R. Valencia, \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
-\item Castilla, L. M. (2021) \emph{Reactivación Económica para el crecimiento sostenido}. En L. M. Castilla, J. Seinfield, M. von Hese, N. Besich, M. Jaramillo, R. Barrantes, . . . D. Alfaro, \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
-\item Castilla, L. M. (2022) \emph{Encadenamientos productivos y desarrollo regional: el caso de la minería.}.  En L. M. Castilla, J. Seinfield, N. Besich, C. Trivelli, J. Gallardo, A. Matsuda, . . . R. Valencia, \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
-\item Castilla, L. M., Seinfeld, J., von Hese, M., Besich, N. (2021) \emph{Introducción}. En L. M. Castilla, J. Seinfield, M. von Hese, N. Besich, M. Jaramillo, R. Barrantes, . . . D. Alfaro, \textit{Propuestas del Bicentenario: Rutas para un país en desarrollo} (págs. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
-\item Consejo Privado de Competitividad. (2019). \emph{Informe de Competitividad 2020}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2019/11/CPC_Peru_INC-2020_Libro-Web-Paginas.pdf}{here.}
-\item Consejo Privado de Competitividad. (2020). \emph{Índice Regional de Gestión Pública (IRGP) 2020}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here.}
-\item Consejo Privado de Competitividad. (2020). \emph{Informe de Competitividad 2021}. Lima: Consejo Privado de Competitividad. Available \href{https://www.compite.pe/wp-content/uploads/2021/01/Informe-de-Competitividad-2021-CPC.pdf}{here.}
-\end{rSection} 
+
 \begin{rSection}{Extra curricular activities} 
 \begin{itemize}
    \item 	\textbf{EvalYouth Global Mentoring Program (EY-GMP) 2020-2021.} {The EY-GMP is an initiative to support novice evaluators and young professionals to become skilled and trusted professionals who can confidently undertake evaluation roles in their communities and countries.}
    \item 	\textbf{Impacta! Young people for public management 2019-2020.} {Impacta is a non-profit civil association, directed and made up of young people convinced that to achieve the full development of a country it is necessary to have solid, transparent public institutions capable of responding efficiently to the needs of its citizens.}
   \end{itemize}
 
-
 \end{rSection}
 
-
-\end{document}
+   \end{document}
