--- a/Data Perú/Conflictos sociales/textoConflictos.ipynb
+++ b/Data Perú/Conflictos sociales/textoConflictos.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def datosConflictos(nInforme):\n",
@@ -380,7 +380,8 @@
     "            \n",
     "            listConf = resultsIncomp[dpto]\n",
     "            resultsIncomp[dpto] = [sorted(conf) for conf in listConf if len(conf) == 9]\n",
-    "    \n",
+    "            listConf = resultsIncomp[dpto]\n",
+    "            \n",
     "            for conf in listConf:\n",
     "                dptoList.append(dpto)\n",
     "                detalleList.append(conf[0])\n",
@@ -420,24 +421,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-24T02:18:36.737640400Z",
-     "start_time": "2023-10-24T02:18:36.690749200Z"
+     "end_time": "2023-10-24T02:35:53.590046800Z",
+     "start_time": "2023-10-24T02:35:53.573990500Z"
     }
    },
    "id": "6a6e7811c36a5853"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "outputs": [],
    "source": [
-    "df235 = datosConflictos(235)"
+    "df235 = datosConflictos(177)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-24T02:31:57.487729800Z",
-     "start_time": "2023-10-24T02:31:45.735404500Z"
+     "end_time": "2023-10-24T02:41:52.449169100Z",
+     "start_time": "2023-10-24T02:41:44.264786Z"
     }
    },
    "id": "9230e96e03104ed2"
